fixing browser location/history so back/forward buttons work + adjusting height of Person map so it doesn't create an extra scrollbar for most users on the main content

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,7 +4,7 @@
 
 #map {
   width: 100%;
-  height: calc(100vh - 412px);
+  height: calc(100vh - 420px);
 
   .leaflet-popup-content-wrapper {
     border-radius: $border-radius;
